[gd_scene load_steps=11 format=3 uid="uid://bbqbnh0v1wgrq"]

[ext_resource type="Script" uid="uid://dxy2is8vx7nv1" path="res://Script/Entities/Player/PlayerUI.gd" id="1_2vjef"]
[ext_resource type="PackedScene" uid="uid://cgd0xvu3dtacq" path="res://Scene/UI/NoiseLevel/NoiseLevel.tscn" id="1_3futq"]
[ext_resource type="PackedScene" uid="uid://btqu5jb37xgqb" path="res://Scene/UI/Radar/Radar.tscn" id="1_h567k"]
[ext_resource type="Material" uid="uid://b42h8yvumlcok" path="res://Materias/UI/fog_shader_materia.tres" id="2_605v3"]
[ext_resource type="Shader" uid="uid://drihwus6qo5vp" path="res://Script/UI/shader/bucato.gdshader" id="3_46xdf"]
[ext_resource type="PackedScene" uid="uid://bsshix608k1uw" path="res://Scene/UI/Terminal/Terminal.tscn" id="4_wxdrp"]
[ext_resource type="PackedScene" uid="uid://db4x7trxrqqyw" path="res://Scene/Interaction/VideoManager/VideoManager.tscn" id="7_3r566"]
[ext_resource type="PackedScene" uid="uid://cfo2qwjimef8b" path="res://Scene/UI/Pause/pause_menu.tscn" id="7_6eie3"]
[ext_resource type="Texture2D" uid="uid://qbry6ymubkbr" path="res://Asset/UI/loading_image.jpg" id="9_tb810"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_edah0"]
shader = ExtResource("3_46xdf")
shader_parameter/background_color = Color(0.0794066, 0.0773409, 0.104962, 1)
shader_parameter/circle_color = Color(0, 0, 0, 0)
shader_parameter/circle_radius = 0.1
shader_parameter/circle_position = Vector2(0.36, 0.5)

[node name="MainUi" type="CanvasLayer"]
script = ExtResource("1_2vjef")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 2.0
offset_right = -6.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NoiseLevel" parent="HBoxContainer" instance=ExtResource("1_3futq")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="ProgressBar" parent="HBoxContainer/NoiseLevel" index="0"]
offset_left = 85.0
offset_top = 510.0
offset_right = 592.0
offset_bottom = 553.0
scale = Vector2(0.680001, 1)

[node name="Radar" parent="HBoxContainer" instance=ExtResource("1_h567k")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2

[node name="Control" parent="HBoxContainer/Radar" index="0"]
offset_left = 5.0
offset_top = 20.0
offset_right = 5.0
offset_bottom = 20.0
scale = Vector2(1.3, 1.3)

[node name="Sprite2D" parent="HBoxContainer/Radar" index="1"]
position = Vector2(200, 395)
scale = Vector2(0.9, 0.9)

[node name="Terminal" parent="HBoxContainer" instance=ExtResource("4_wxdrp")]
layout_mode = 2
size_flags_stretch_ratio = 1.46

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_edah0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -371.0
offset_right = -119.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
color = Color(0, 0.324977, 0.510337, 1)

[node name="Fog" type="ColorRect" parent="ColorRect"]
material = ExtResource("2_605v3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -46.9231
offset_right = 45.0
offset_bottom = 502.077
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)

[node name="VideoManager" parent="." instance=ExtResource("7_3r566")]

[node name="PauseMenu" parent="." instance=ExtResource("7_6eie3")]
visible = false
z_index = 2
offset_left = 386.0
offset_top = 350.0
offset_right = 386.0
offset_bottom = 350.0

[node name="LoadingImage" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(577.125, 325.25)
scale = Vector2(1.80556, 1.80417)
texture = ExtResource("9_tb810")

[editable path="HBoxContainer/NoiseLevel"]
[editable path="HBoxContainer/Radar"]
